--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -1,1 +1,11 @@
 project_id = "ulgylkhngvcqogtpfvcw"
+[functions.create-batch-users]
+enabled = true
+verify_jwt = true
+import_map = "./functions/create-batch-users/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/create-batch-users/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/create-batch-users/*.html" ]
