--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "epubjs": "^0.3.93",
     "get-youtube-id": "^1.0.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
@@ -56,6 +57,7 @@
     "react-hook-form": "^7.61.1",
     "react-pdf": "^10.3.0",
     "react-player": "^3.4.0",
+    "react-reader": "^2.0.15",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
     "react-youtube": "^10.1.0",
